DAO/main/default/objects/Account/fields/DAO_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DAO_DBA_Name__c</fullName>
    <description>Doing-business-as name for business accounts in DAO flows (optional).</description>
    <label>DAO DBA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>