DAO/main/default/objects/Account/fields/DAO_EIN_Last_4__c.field-meta.xml
<CustomField>
    <fullName>DAO_EIN_Last_4__c</fullName>
    <description>Last four digits of EIN for business Account search (DAO). Do not store full EIN here.</description>
    <label>DAO EIN Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>