DAO/main/default/objects/Account/fields/DAO_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>DAO_Person_Email__c</fullName>
    <description>Email for DAO customer lookup when Person Account fields are not available (business-style Account).</description>
    <label>DAO Person Email</label>
    <type>Email</type>
</CustomField>