DAO/main/default/objects/Account/fields/DAO_SSN_Last_4__c.field-meta.xml
<CustomField>
    <fullName>DAO_SSN_Last_4__c</fullName>
    <description>Last four digits of SSN for Person Account search (DAO). Do not store full SSN here.</description>
    <label>DAO SSN Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>